app/assets/stylesheets/forest/partials/_select2_custom.scss
.select2-container {
  min-width: 200px;
  max-width: 100%;
}

.select2-container--bootstrap4 .select2-results__option--highlighted[aria-selected], {
  .text-muted {
    color: #fff !important;
  }
}

.form-group.date {
  select.date {
    width: 32%;
  }

  .select2-container {
    min-width: 100px;
  }
}

.select .select2-container {
  width: 100% !important;
}

.select2-dropdown {
  z-index: 1010;
}

.select2-container .select2-selection--single .select2-selection__rendered {
  display: flex;
  align-items: center;
}

.is-ui-sortable {
  .select2-selection--multiple {
    .select2-selection__choice {
      float: left;
      background-color: $white;
    }
  }
}

.select2-selection__choice__display {
  img {
    vertical-align: top;
    margin-top: 1px;
  }
}

